CHANGES IN VERSION 1.51.12
--------------------------

NEW FEATURES:
- plotChromatogram and highlightChromPeaks functions.


CHANGES IN VERSION 1.51.11
--------------------------

NEW FEATURES:
- Parameter "filled" for featureValues (issue #157).
- Parameters "rt" and "mz" in chromPeaks method allowing to extract
  chromatographic peaks from the specified ranges (issue #156).

BUG FIXES:
- Fixed possible memory problem in obiwarp (issue #159).
- Update getPeaks to use non-deprecated API (issue #163).


CHANGES IN VERSION 1.51.10
--------------------------

NEW FEATURES:
- filterRt for Chromatogram class (issue #142).
- adjustRtimePeakGroups function (issue #147).
- adjustRtime,XCMSnExp,PeakGroupsParam and do_adjustRtime_peakGroups support
  use of pre-defined matrix to perform alignment (issue #153).
- plotAdjustedRtime to visualize alignment results (issue #141).

USER VISIBLE CHANGES:
- featureDefinitions and featureValues return DataFrame and matrix with rownames
  corresponding to arbitrary feature IDs (issue #148).
- New peakGroupsMatrix slot for PeakGroupsParam class (issue #153).

BUG FIXES:
- Issue #146: ensure adjusted retention times returned by the peakGroups method
  to be in the same order than the raw retention times.


CHANGES IN VERSION 1.51.9
-------------------------

NEW FEATURES:
- fillChromPeaks, dropFilledChromPeaks methods and FillChromPeaksParam class.
- featureValues method.

USER VISIBLE CHANGES:
- Extended new_functionality vignette.
- Change default backend for reading mzML files to pwiz.

BUG FIXES:
- Issue #135: fix peak signal integration for centWave.
- Issue #139: problem with expand.mz and expand.rt in fillPeaks.chrom.
- Issue #137: Error in findChromPeaks if no peaks are found.


CHANGES IN VERSION 1.51.8
-------------------------

NEW FEATURES:
- Add Chromatogram class and extractChromatograms method.

BUG FIXES:
- Issue #118: failing unit test on Windows build machine.
- Issue #133: error with c() and xcmsSet without peaks.